# fnx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  astylerc
.github/workflows/: cmake.yml
dependencies/: README.md
dependencies/include/cutesound/: cute_sound.h
dependencies/include/json/: json.hpp
dependencies/include/stbimage/: stb_image.h
editor/: CMakeLists.txt  main.cpp
editor/res/: Arial.fnt
helloworld/: CMakeLists.txt  main.cpp
include/fnx/: fnx.hpp
include/fnx/containers/: bitset.hpp  dequeue.hpp  ring_buffer.hpp  unordered_vector.hpp
include/fnx/core/: alignment.hpp  async.hpp  byte_stream.hpp  id_manager.hpp  serialize.hpp  serializer.hpp  singleton.hpp  tween.hpp
include/fnx/engine/: asset.hpp  asset_manager.hpp  audio_manager.hpp  camera.hpp  camera_manager.hpp  camera_serializer.hpp  colors.hpp  config_constants.hpp  constants.hpp  dispatcher.hpp  display_mode.hpp  engine_events.hpp  events.hpp  font.hpp  keys.hpp  layer.hpp  layer_stack.hpp  lights.hpp  logger.hpp  material.hpp  material_map.hpp  model.hpp  ortho_camera.hpp  perspective_camera.hpp  property.hpp  property_manager.hpp  raw_image.hpp  raw_model.hpp  renderer.hpp  shader.hpp  sound.hpp  texture.hpp  type_names.hpp  window.hpp  world.hpp
include/fnx/math/: angle.hpp  math.hpp  matrix4x4.hpp  rect.hpp  vector4.hpp
include/fnx/memory/: function_ref.hpp  heap_allocator.hpp  heap_indexed_pool.hpp  reference_ptr.hpp
include/fnx/ui/: animator.hpp  block.hpp  button.hpp  clipping_container.hpp  collapsable.hpp  constraints.hpp  image.hpp  interface.hpp  label.hpp  layer.hpp  layer_serializer.hpp  layer_stack.hpp  line.hpp  mutually_exclusive_container.hpp  panel.hpp  progress_bar.hpp  radio.hpp  scroll_view.hpp  sizer.hpp  slider.hpp  tabbed_notebook.hpp  text_box.hpp  text_input.hpp  timer.hpp  transition.hpp  widget.hpp  widget_config.hpp  widget_layer.hpp
include/fnx/utils/: macro_utils.hpp  react_utils.hpp  string_utils.hpp  template_utils.hpp  ui_utils.hpp  yaml_utils.hpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/res/: user_interface.yaml
src/: compile.cpp
src/engine/: audio_manager.cpp  camera.cpp  camera_serializer.cpp  font.cpp  keys.cpp  layer.cpp  layer_stack.cpp  material.cpp  model.cpp  ortho_camera.cpp  perspective_camera.cpp  raw_image.cpp  raw_model.cpp  renderer.cpp  shader.cpp  sound.cpp  texture.cpp  window.cpp  world.cpp
src/ui/: animator.cpp  block.cpp  button.cpp  constraints.cpp  fnxgui.cpp  image.cpp  interface.cpp  label.cpp  layer.cpp  layer_serializer.cpp  layer_stack.cpp  line.cpp  panel.cpp  progress_bar.cpp  scroll_view.cpp  sizer.cpp  slider.cpp  text_input.cpp  timer.cpp  transition.cpp  widget.cpp  widget_layer.cpp
src/utils/: string_utils.cpp
test/: test.hpp
unit/: CMakeLists.txt  containers.cpp  core.cpp  main.cpp  math.cpp  memory.cpp
